--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,10 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password: Asdfgh123@
-  socket: /var/run/mysqld/mysqld.sock
+  username: <%= ENV['DB_USER'] %>
+  password: <%= ENV['DB_PASS'] %>
+  host: <%= ENV['DB_HOST'] %>
+  #socket: /var/run/mysqld/mysqld.sock
 
 development:
   <<: *default
